# kuuve_opencv

./: README.md
crosswalk_stop/: CMakeLists.txt  README.md  package.xml
crosswalk_stop/launch/: opencv_team.launch  opencv_team_gtcam.launch  opencv_team_webcam.launch  test_with_gtcam.launch  test_with_webcam.launch  without_serial_node.launch
crosswalk_stop/src/: CrosswalkStop.cpp  CrosswalkStopNode.cpp  LineDetector.cpp  main.cpp  main.cpp.origin
kuuve_control/src/: write_serial.cpp
kuuve_opencv/: CMakeLists.txt  package.xml
kuuve_parking/: CMakeLists.txt  README.md  box_filter.yaml  package.xml
kuuve_parking/launch/: opencv_team_webcam.launch  test_with_webcam.launch  test_with_webcam_and_lidar.launch
kuuve_parking/src/: LineDetector.cpp  ParkingNode.cpp  main.cpp  main.cpp.seq
lane_detector/: CMakeLists.txt  README.md  package.xml
lane_detector/config/: detect.yaml  hardware_control.yaml  image_process.yaml
lane_detector/launch/: .opencv_team.launch.swp  .without_serial_node.launch.swp  opencv_team.launch  without_gt_camera.launch  without_serial_node.launch
lane_detector/src/: .LaneDetector.cpp.swp  InToOutLaneDetector.cpp  LaneDetector.cpp  LaneDetectorNode.cpp  LinePointDetector.cpp  main.cpp
message_filter_test/: CMakeLists.txt  package.xml
mission_planner/: CMakeLists.txt  README.md  package.xml
platform_control/: CMakeLists.txt  package.xml
serial-example/: CMakeLists.txt  README.md
vision_narrow_drive/: CMakeLists.txt  README.md  package.xml
vision_static_avoidance/: CMakeLists.txt  README.md  package.xml
(+58 files in other folders)
